# thymesheet

./: .gitignore  Cargo.toml  README.md  env.bat  push  run
migrations/2024-04-09-182125_create_days/: down.sql  up.sql
migrations/2024-04-09-182400_create_weeks/: up.sql
src/: admin.rs  lib.rs  main.rs  models.rs  public.rs  schema.rs
templates/: index.html.hbs  login.html.hbs  template.html.hbs
templates/admin/: index.html.hbs  week.html.hbs
