[package]
name = "thymesheet"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.5", features = ["sqlite"] }
dotenvy = "0.15.7"
handlebars = "5.1.2"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
