[package]
name = "thymesheet"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.5", features = ["sqlite"] }
dotenvy = "0.15.7"
handlebars = "5.1.2"
markdown = "1.0.0-alpha.16"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = "1.0.197"
