[package]
name = "thymesheet"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "5.1.2"
markdown = "1.0.0-alpha.16"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["sqlite"] }
